--- a/JAVA/My First App/src/main/resources/application.properties
+++ b/JAVA/My First App/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/skillvertex
-spring.datasource.username=postgres
-spring.datasource.password=12412343
+spring.datasource.url=jdbc:postgresql://localhost:5432/<name of database>
+spring.datasource.username=user
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
